Improved native scroll container for IE11 for showing the scrollbars correctly.

--- a/framework/source/resource/qx/mobile/scss/common/_scroller.scss
+++ b/framework/source/resource/qx/mobile/scss/common/_scroller.scss
@@ -41,7 +41,8 @@
 }
 
 .scroll.native {
-  overflow:scroll;
+  overflow-y:scroll;
+  overflow-x:hidden;
   
   -webkit-overflow-scrolling:touch;
   -ms-overflow-style: -ms-autohiding-scrollbar;
